k8s/overlays/prod/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-example
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    external-dns.alpha.kubernetes.io/hostname: "nginx-prod.iqball.tech"
    external-dns.alpha.kubernetes.io/ttl: "300"
spec:
  tls:
  - hosts:
    - nginx-prod.iqball.tech
  rules:
  - host: nginx-prod.iqball.tech
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-example
            port:
              number: 80
